fix title and subtitle spacing/positioning

--- a/css/main.scss
+++ b/css/main.scss
@@ -229,10 +229,10 @@ $red-orange: #ff5035;
 
 
     img.hero {
-        margin-top: -36px;
+        // margin-top: -36px;
         margin-bottom: 48px;
         @include breakpoint(medium) {
-          margin-top: -48px;
+          // margin-top: -48px;
           margin-bottom: 12px;
         }
     }
@@ -251,21 +251,14 @@ $red-orange: #ff5035;
         }
     }
 
-    // .floating-textbox {
-    //     position: absolute;
-    //     svg {
-    //         width: 100%;
-    //         height: 100%;
-    //         fill: orange;
-    //     }
-    // }
+
 
     .floating-textbox {
-        margin-left: 24px;
         margin-top: -24px;
-        margin-right: 24px;
 
         @include breakpoint(large) {
+          margin-left: 24px;
+          margin-right: 24px;
             max-width: 600px;
             position: absolute;
 
@@ -416,7 +409,7 @@ body.subpage > .section.light {
 }
 
 .section-content {
-  position: relative;
+  // position: relative;
     h4 {
         font-weight: 700;
         text-transform: uppercase;
